# devops_adventure_baseline_V3

./: README.md
Dealership/: README.md  pyproject.toml
Dealership/app/: Dockerfile
Dealership/src/: main.py
Dealership/src/static/: index.html
baseline_store/moto_store/: Dockerfile  docker-compose.yml  requirements.txt
baseline_store/moto_store/.github/workflows/: pipeline.yml
baseline_store/moto_store/Baselise-app/app/: Dockerfile  pyproject.toml
baseline_store/moto_store/Baselise-app/app/postgres/: Dockerfile
baseline_store/moto_store/Baselise-app/app/src/: config.py  db.py  main.py
baseline_store/moto_store/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
