[tool.poetry]
name = "devops-adventure-baseline"
version = "0.1.0"
description = ""
authors = ["Shadow757 <hprata6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
