[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["goncalo batista <gnccb07@gmail.com>"]
readme = "README.md"
packages = [
    { include = "./src" ,
     include = "./postgres" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
asyncpg = "^0.29.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"